работа part-service
- fix: исправил метод PartService.getAllParts
- feat: сделал единый профиль
- feat: сделал подобие миграции базы данных